region: Set button arrow icons according to locale's text direction

https://bugzilla.gnome.org/show_bug.cgi?id=700543